# jnorm

./: .coveragerc  .dockerignore  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  README.md  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst
example/: people.json
example/output/: people.jsonl  people_address.jsonl  people_favorite_foods.jsonl
src/jnorm/: main.py  skeleton.py
tests/: conftest.py  test_skeleton.py
tests/example/: people.json
tests/example/output/: people.jsonl  people_favorite_foods.jsonl  people_housing_history.jsonl
