[metadata]
name = jnorm
version = 1.0.0
description = Normalize massive JSON files into JSONL
author = Forrest Bajbek
author_email = forrestbajbek@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/forrest-bajbek/jnorm
project_urls =
    Source = https://github.com/forrest-bajbek/jnorm
    Tracker = https://github.com/forrest-bajbek/jnorm/issues
    Download = https://github.com/forrest-bajbek/jnorm
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database
    Topic :: Text Processing


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
python_requires = >=3.9
install_requires =
    ijson
    rich

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
dev =
    black
    isort
    flake8
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    jnorm = jnorm.main:run

[tool:pytest]
addopts =
    --cov jnorm --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
